# cantopedia

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-CODE  LICENSE-CONTENT  README.md  README.zh.md
.github/workflows/: ci.yml  deploy.yml
data/categories/: appetizer.yaml  baked-rice.yaml  congee.yaml  main.yaml  noodle.yaml  rice.yaml  soup-noodle.yaml  soup-wonton.yaml
data/dishes/: 001-ceoi3-pei4-zaai1-ceon1-gyun2.yaml  002-ging1-sik1-zin1-wo1-tip3.yaml  003-saa1-leot6-zaa3-haa1-gok3.yaml  004-ziu1-jim4-zaa3-jyu4-daan2.yaml  005-syun3-hoeng1-guk6-gon1-gwat1.yaml  006-sei3-cyun1-hung4-jau4-caau1-sau2.yaml  007-sou1-zaa3-gai1-jik6.yaml  008-wo1-wan4-tan1.yaml  009-wan4-tan1-tong1.yaml  010-lai6-tong1.yaml  011-daai6-fu3-hou4-caau2-faan6.yaml  012-joeng4-zau1-caau2-faan6.yaml  013-gai1-lap1-caau2-faan6.yaml  014-haa1-jan4-caau2-faan6.yaml  015-fuk1-gin3-caau2-faan6.yaml  016-mat-zap-cha-siu-faan.yaml  016-mat6-zap1-caa1-siu1-faan6.yaml  017-suk1-mai5-jyu4-lau5-faan6.yaml  018-faan1-ke2-joeng4-cung1-zyu1-paa2-faan6.yaml  (+48 more)
docs/: HANDOFF.md
pipeline/: README.md  environment.yml  pyproject.toml
pipeline/cantopedia_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pipeline/pipeline/: __init__.py  __main__.py  cli.py  models.py  paths.py  transcription.py  yaml_io.py
pipeline/pipeline/commands/: fetch.py  init.py  status.py  validate.py
pipeline/pipeline/sources/: __init__.py  _cache.py  wikimedia_commons.py  wikipedia.py
scripts/: convert_heic.py
site/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
(+256 files in other folders)
