[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cantopedia-pipeline"
version = "0.1.0a0"
description = "Research and content pipeline for 粵食典 · Cantopedia"
readme = "README.md"
authors = [{ name = "Cantopedia contributors" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "click>=8.1",
  "pydantic>=2.5",
  "ruamel.yaml>=0.18",
  "httpx>=0.27",
  "requests>=2.32",
  "pillow>=10.0",
  "pillow-heif>=0.16",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]

[project.scripts]
cantopedia-pipeline = "pipeline.cli:cli"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"
